# Engineering_robot_RM2025_Pnx

./: .gitignore  README.md  camera_calibration.cpp  cameraparam  try.cpp
launch/: launch.py  launch_calibratecamera.py  launch_cameradrive.py  launch_videodriver.py
src/: config.yaml
src/calibratecamera/: CMakeLists.txt  package.xml
src/calibratecamera/src/: CalibrateCamera.cpp
src/detect_arror/: CMakeLists.txt  package.xml
src/detect_arror/src/: detect_arror.cpp
src/detect_arrow/: CMakeLists.txt  package.xml
src/detect_arrow/config/: ArrowDetectorConfig.yaml
src/detect_arrow/include/detect_arror/: DetectArrow.hpp  Filter.hpp
src/detect_arrow/launch/: launch.py
src/detect_arrow/src/: DetectArrow.cpp  Filter.cpp  Functions.cpp  detect_arrow.cpp
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/msg/: RedeemBoxPosition.msg
src/interfaces/srv/: Imagerequest.srv
src/rgbdgenerator/: CMakeLists.txt  package.xml
src/rgbdgenerator/launch/: launchc.py
src/rgbdgenerator/src/: main.cpp
src/senserdrivers/: CMakeLists.txt  package.xml
src/simulation/: package.xml
src/simulation/urdf/: RedeemBoxConfig.rviz  Redeem_box.urdf  Robot.urdf
src/videodriver/: CMakeLists.txt  package.xml
src/videodriver/config/: cameraconfig.yaml
src/videodriver/launch/: launch.py  launch_videodriver.yaml  launchc.py  launchv.py
src/videodriver/src/: CameraDriver.cpp  PictureDriver.cpp  VideoDriver.cpp
